# course-sequencing-analysis-tool

./: .gitignore  2  README.md  cli.py  gui.py  lab_code.py  pyproject.toml  requirements.txt  test_dataset.csv
src/gsp_toolkit/: cleaned_test_dataset.csv  command_line_interface.py  data_processing.py  graphical_interface.py  gsp_algorithm.py  utils.py
